# inverse-design-of-Perovskite-using-LLM

./: .env  .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
configs/: data_paths.py
data/: audit_report.txt  cif_auditor.py  create_tokens.py  fetch_labels.py  get_data_from_mp.py  get_data_from_oqmd.py  label_template.csv  mpds_data.py  preprecess.py  preprocessing_custom.py  train_test_split.py  validate_perovskites.py
data/graph_cache/: mp-1001571.pt  mp-1001793.pt  mp-1003314.pt  mp-10036.pt  mp-10037.pt  mp-1003764.pt  mp-10038.pt  mp-10039.pt  mp-10040.pt  mp-10041.pt  mp-1004524.pt  mp-10060.pt  mp-10061.pt  mp-10113.pt  mp-10120.pt  mp-10133.pt  mp-10134.pt  mp-10135.pt  mp-1013530.pt  mp-1013531.pt  mp-1013532.pt  mp-1013533.pt  mp-1013534.pt  mp-1013535.pt  mp-1013536.pt  mp-1013537.pt  mp-1013540.pt  mp-1013541.pt  mp-1013542.pt  mp-1013543.pt  mp-1013544.pt  mp-1013545.pt  mp-1013548.pt  mp-1013549.pt  mp-1013550.pt  mp-1013553.pt  mp-1013554.pt  mp-1013555.pt  mp-1013557.pt  mp-1013558.pt  (+322 more)
gdrive/: commands.sh
models/: SPACE_GROUPS.py  ctgnn_model.py  gnn_explainer.py  gradient_xai.py  label_stats.json  run_explain_.py  tokenizier.py  train_and_explain.py  xai_visualization.py
rclone_remote_pilot/: .gitignore  QUICK_SETUP.md  README.md  SETUP.md  config.env.example  configure.sh  job_notifier.sh  job_supervisor.sh  mount_utils.sh  relay.sh  relayctl.sh  repair_mount.sh  send_email.py  sync_mirror.sh
rclone_remote_pilot/docs/: README.md  architecture.md  config-reference.md  operations.md
utils/: logger.py
(+13 files in other folders)
