[project]
name = "inverse-design-of-perovskite-using-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "mp-api>=0.46.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pathlib>=1.0.1",
    "pymatgen>=2025.10.7",
    "torch>=2.0.0",
]